<resources>
    <string name="app_name">AttendanceTracker</string>

    <string name="button2">Master</string>
    <string name="button">Teacher</string>
    <string name="button3">Student</string>


    <string name="admin_activity">Master Login</string>
    <string name="teacher_activity">Teacher Login</string>
    <string name="student_activity">Student Login</string>

    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student_menu">StudentMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_class">Add Class</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="attendance">Attendance</string>
    <string name="upload_question_paper">Upload Question Paper</string>
    <string name="view_assignments">View Assignments</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>

</resources>
