<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin">


    <ImageView
        android:id="@+id/adminImage"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/adminLoginGld2"
        app:layout_constraintStart_toStartOf="@id/adminLoginGld1"

        app:srcCompat="@drawable/admin_login"
        tools:layout_editor_absoluteY="61dp" />

    <EditText
        android:id="@+id/adminUsrName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"

        android:text=""
        app:layout_constraintBottom_toTopOf="@id/adminPassword"
        app:layout_constraintEnd_toEndOf="@id/adminLoginGld2"
        app:layout_constraintStart_toStartOf="@id/adminLoginGld1"
        app:layout_constraintTop_toBottomOf="@id/adminImage"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/adminPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/adminLogin"
        app:layout_constraintEnd_toEndOf="@id/adminLoginGld2"

        app:layout_constraintStart_toStartOf="@id/adminLoginGld1"
        app:layout_constraintTop_toBottomOf="@id/adminUsrName" />

    <Button
        android:id="@+id/adminLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/blue_button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@id/adminLoginGld2"
        app:layout_constraintStart_toStartOf="@id/adminLoginGld1"
        app:layout_constraintTop_toBottomOf="@id/adminPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/adminLoginGld1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/adminLoginGld2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />
</androidx.constraintlayout.widget.ConstraintLayout>