<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivities.StudentLogin">

    <ImageView
        android:id="@+id/studentImage"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintDimensionRatio="1:1.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/stdLoginGld2"
        app:layout_constraintStart_toStartOf="@id/stdLoginGld1"

        app:srcCompat="@drawable/student_login"
        tools:layout_editor_absoluteY="61dp" />

    <EditText
        android:id="@+id/studentUsrName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"

        android:drawableLeft="@drawable/user_icon"

        android:inputType="textPersonName"

        android:text=""
        app:layout_constraintBottom_toTopOf="@id/studentPassword"

        app:layout_constraintEnd_toEndOf="@id/stdLoginGld2"
        app:layout_constraintStart_toStartOf="@id/stdLoginGld1"
        app:layout_constraintTop_toBottomOf="@id/studentImage"
        app:layout_constraintVertical_chainStyle="spread" />


    <EditText
        android:id="@+id/studentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"

        android:drawableLeft="@drawable/pass_icon"

        app:layout_constraintBottom_toTopOf="@id/studentLogin"
        app:layout_constraintEnd_toEndOf="@id/stdLoginGld2"

        app:layout_constraintStart_toStartOf="@id/stdLoginGld1"
        app:layout_constraintTop_toBottomOf="@id/studentUsrName" />

    <Button
        android:id="@+id/studentLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_button"

        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@id/stdLoginGld2"
        app:layout_constraintStart_toStartOf="@id/stdLoginGld1"

        app:layout_constraintTop_toBottomOf="@id/studentPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/stdLoginGld1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/stdLoginGld2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />
</androidx.constraintlayout.widget.ConstraintLayout>
